--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^0.16.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
